[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/ScreenMatrix.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[node name="Menu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 10.0
margin_bottom = -5.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.217239
anchor_top = 0.297273
anchor_right = 0.780179
anchor_bottom = 0.297273
margin_top = -19.5
margin_right = -189.57
margin_bottom = 19.5
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.784314, 0.278431, 1 )
text = "THE PROGRAMATOR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start" type="Button" parent="."]
anchor_right = 1.0
margin_left = 368.476
margin_top = 251.37
margin_right = -380.524
margin_bottom = 305.37
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.558
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -0.126007
margin_right = -3.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 1010.0
margin_bottom = 142.0
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 447.0
margin_right = 467.0
margin_bottom = 20.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 471.0
margin_right = 491.0
margin_bottom = 20.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 495.0
margin_right = 515.0
margin_bottom = 20.0
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 519.0
margin_right = 539.0
margin_bottom = 20.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 543.0
margin_right = 563.0
margin_bottom = 20.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button5" to="." method="_on_Button5_pressed"]
